Update contact form email address and enhance translation handling in lang.js

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     </div>
                 </div>
 
-                <form class="contact-form" action="https://formsubmit.co/gwscary@gmail.com" method="POST"
+                <form class="contact-form" action="https://formsubmit.co/siddhipatil2632006@gmail.com" method="POST"
                     id="contactForm">
                     <!-- Form Inputs -->
                     <input type="text" id="form-name" name="name" data-i18n="form.name" data-i18n-attr="placeholder"
@@ -244,7 +244,7 @@
                     <input type="hidden" name="_subject" value="New Contact Form Submission!">
                     <input type="hidden" name="_autoresponse" data-i18n="form.autoresponse" data-i18n-attr="value"
                         value="¡Gracias por contactarnos! Nos comunicaremos con usted pronto.">
-                    <!-- <input type="hidden" name="_cc" value="friend@example.com"> -->
+                    <input type="hidden" name="_cc" value="gwscary@gmail.com">
 
                     <!-- Error/Success Messages -->
                     <div id="form-error" role="alert" aria-live="assertive" data-i18n="form.error.generic">No se pudo
