Enhance contact form by dynamically setting subject and reply-to fields across multiple pages

--- a/infrastructure.html
+++ b/infrastructure.html
@@ -229,8 +229,12 @@
                     <!-- Hidden FormSubmit Config -->
                     <input type="hidden" name="_captcha" value="false">
                     <input type="text" name="_honey" style="display:none">
+                    <!-- <input type="email" name="_replyto" placeholder="Your email"> -->
+                    <input type="hidden" name="_subject" value="New Contact Form Submission - {{name}}">
                     <input type="hidden" name="_autoresponse" data-i18n="form.autoresponse" data-i18n-attr="value"
                         value="¡Gracias por contactarnos! Nos comunicaremos con usted pronto.">
+                    <input type="hidden" name="_replyto" value="">
+                    <!-- <input type="hidden" name="_cc" value="gwscary@gmail.com"> -->
 
                     <!-- Error/Success Messages -->
                     <div id="form-error" role="alert" aria-live="assertive" data-i18n="form.error.generic">No se pudo
@@ -264,6 +268,7 @@
                         setTimeout(restorePlaceholders, 0);
                     });
 
+
                     contactForm.addEventListener('submit', async function (e) {
                         e.preventDefault();
 
@@ -289,6 +294,12 @@
                         if (!emailOk) { document.getElementById('err-email').style.display = 'block'; emailEl.classList.add('field-invalid'); valid = false; }
                         if (!msgEl.value.trim()) { document.getElementById('err-message').style.display = 'block'; msgEl.classList.add('field-invalid'); valid = false; }
                         if (!valid) { return; }
+
+                        // Set _replyto field dynamically
+                        document.querySelector('input[name="_replyto"]').value = emailEl.value;
+
+                        // Set _subject field dynamically
+                        document.querySelector('input[name="_subject"]').value = `New Contact Form Submission ${nameEl.value}`;
 
                         const formData = new FormData(form);
 
