--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     </div>
                 </div>
 
-                <form class="contact-form" action="https://formsubmit.co/gwscary@gmail.com" method="POST"
+                <form class="contact-form" action="https://formsubmit.co/siddhipatil2632006@gmail.com" method="POST"
                     id="contactForm">
                     <!-- Form Inputs -->
                     <input type="text" id="form-name" name="name" data-i18n="form.name" data-i18n-attr="placeholder"
