--- a/contact.html
+++ b/contact.html
@@ -395,7 +395,7 @@
                     </div>
                 </div>
 
-                <form class="contact-form" action="https://formsubmit.co/gwscary@gmail.com" method="POST"
+                <form class="contact-form" action="https://formsubmit.co/zzzzzaq291@gmail.com" method="POST"
                     id="contactFormFooter">
                     <!-- Form Inputs -->
                     <input type="text" id="footer-form-name" name="name" data-i18n="form.name"
