--- a/contact.html
+++ b/contact.html
@@ -157,10 +157,10 @@
                     <form id="contactForm" action="https://formsubmit.co/gwscary@gmail.com" method="POST">
                         <input type="hidden" name="_captcha" value="false">
                         <input type="text" name="_honey" style="display:none">
-                        <input type="hidden" name="_template" value="table">
-                        <input type="hidden" name="_subject" value="Feedback Form Submission">
+                        <input type="hidden" name="_subject" value="">
+                        <input type="hidden" name="_replyto" value="">
                         <input type="hidden" name="_autoresponse"
-                            value="Thank you for your message. We'll contact you soon via WhatsApp.">
+                            value="¡Gracias por contactarnos! Nos comunicaremos con usted pronto.">
 
                         <div class="form-row">
                             <div class="form-group">
@@ -205,6 +205,17 @@
                         <div class="form-footer">
                             <button type="submit" class="submit-btn" data-i18n="contact.form.submit">Enviar
                                 mensaje</button>
+
+                            <!-- Error/Success Messages -->
+                            <div id="footer-form-error" role="alert" aria-live="assertive"
+                                style="display:none; color:red;" data-i18n="form.error.generic">
+                                pudo enviar el formulario. Inténtalo de nuevo.
+                            </div>
+                            <div id="footer-form-success" style="display:none; color:green;" role="status"
+                                aria-live="polite" data-i18n="form.success">
+                                ¡Gracias! Su mensaje ha sido enviado exitosamente.
+                            </div>
+
                             <div class="form-note">
                                 <p data-i18n="contact.form.note">* Campos requeridos</p>
                             </div>
@@ -264,9 +275,17 @@
                 })
                     .then(response => {
                         if (response.ok) {
-                            alert('✅ Message sent successfully!');
+                            // ✅ Show success div, hide error
+                            document.getElementById('footer-form-success').style.display = 'block';
+                            document.getElementById('footer-form-error').style.display = 'none';
                             form.reset();
-                            // 👉 Redirect to WhatsApp if you want
+
+                            // 👉 Optional: hide success after 5 seconds
+                            setTimeout(() => {
+                                document.getElementById('footer-form-success').style.display = 'none';
+                            }, 5000);
+
+                            // 👉 Optional redirect to WhatsApp
                             // window.location.href = "https://wa.me/56933990606";
                         } else {
                             throw new Error('FormSubmit response not OK');
@@ -274,10 +293,13 @@
                     })
                     .catch(error => {
                         console.error('Error:', error);
-                        alert('❌ There was a problem sending your message. Please try again or contact us via WhatsApp.');
+                        // ❌ Show error div, hide success
+                        document.getElementById('footer-form-error').style.display = 'block';
+                        document.getElementById('footer-form-success').style.display = 'none';
                     });
             });
         </script>
+
 
 
         <!-- Add this CSS -->
