Update contact form action URL in contact.html and index.html

--- a/contact.html
+++ b/contact.html
@@ -154,7 +154,7 @@
                         dentro de las 24 horas</p>
                 </div>
                 <div class="form-container">
-                    <form id="contactForm" action="https://formsubmit.co/gwscary@gmail.com" method="POST">
+                    <form id="contactForm" action="https://formsubmit.co/zzzzzaq291@gmail.com" method="POST">
                         <input type="hidden" name="_captcha" value="false">
                         <input type="text" name="_honey" style="display:none">
                         <input type="hidden" name="_subject" value="">
@@ -178,7 +178,7 @@
                             <div class="phone-input-wrapper">
                                 <input type="text" id="country-code" name="Country code" placeholder="+1"
                                     class="country-code" maxlength="4" required>
-                                <input type="tel" id="phone" name="WhatsApp Number" class="phone-number" required>
+                                <input type="tel" id="phone" name="WhatsApp Number" class="phone-number" minlength="10" required>
                             </div>
                         </div>
 
@@ -440,7 +440,7 @@
                     </div>
                 </div>
 
-                <form class="contact-form" action="https://formsubmit.co/gwscary@gmail.com" method="POST"
+                <form class="contact-form" action="https://formsubmit.co/zzzzzaq291@gmail.com" method="POST"
                     id="contactFormFooter">
                     <!-- Form Inputs -->
                     <input type="text" id="footer-form-name" name="name" data-i18n="form.name"
